Basic Neil Rens site

--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
     </head>
     <body>
-        <h1>This is the website of Neil Rens</h1>
+        <h1>Personal Website of Neil Rens</h1>
+        <h2>Websites I have made</h2>
+        <ul>
+            <li><a href="http://ambassadors.johnshopkins.edu" target="blank">JHU Alumni Ambassadors</a></li>
+            <li><a href="http://consulting.johnshopkins.edu" target="blank">JHU Consulting Networking Reception</a></li>
+            <li><a href="http://www.goinvo.com/features/us-healthcare/" target="blank">U.S. Healthcare</a>
+        </ul>
+        <h2>Websites I am working on</h2>
+        <ul>
+            <li><a href="/vessel/index.html" target="blank">Vessel World</a></li>
+        </ul>
     </body>
 </html>
