Added email list, real text, better pictures

--- a/vessel/index.html
+++ b/vessel/index.html
@@ -21,6 +21,8 @@
 
     <!-- Theme CSS -->
     <link href="css/grayscale.css" rel="stylesheet">
+    <!-- JS -->
+    <script src="js/email.js"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -92,7 +94,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Our Mission</h2>
-                <p>Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text.</p>
+                <p>Vessel World is working with young people to promote access to internet technology and digital content. We aim to impact one million young people in Africa over the next 5 years. Vessel World is a young people centered non-profit organization registered in the United States, working with and through young people, promoting internet access and content as a platform for sustained development among young people in Africa. Our vision is a better world for all, served by an empowered and committed community of young people.</p>
             </div>
         </div>
     </section>
@@ -103,8 +105,10 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>What We Do</h2>
-                    <p>Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+										<ul>
+											<li><b>Promote access to internet connected devices:</b> We work with schools and other organizations in the U.S. to collect smartphones, tablets, and laptops, and deliver them to young people in Africa.</li>
+											<li><b>Promote access to internet content for education and life skills:</b> We aggregate content and create our own content aimed at minimizing the digital gap for young people in Africa.</li>
+										</ul>
                 </div>
             </div>
         </div>
@@ -112,29 +116,54 @@
 
     <!-- Contact Section -->
     <section id="contact" class="container content-section text-center">
+        <h2>How You Can Help</h2>
+        <p>We invite you to join us as we grow our organization and impact. Currently, Vessel World is refining its practices for delivering access to internet connected devices. If you are interested in helping with the collection of smartphones and tablets, please send us an email. If you other ideas for how to expand our reach or improve our impact, reach out! We would love to stay in touch, so make sure you sign up for our email listserv.</p>
+                   <!-- Begin MailChimp Signup Form -->
+        <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+        <style type="text/css">
+          #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+          /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+             We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+        </style>
+        <div id="mc_embed_signup">
+        <form action="//github.us15.list-manage.com/subscribe/post?u=d21b7989f1f853ed4d6e3d5f3&amp;id=da9e990441" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+          <h2>Subscribe to our mailing list</h2>
+        <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+        <div class="mc-field-group">
+          <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+        </label>
+          <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+        </div>
+        <div class="mc-field-group">
+          <label for="mce-FNAME">First Name </label>
+          <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+        </div>
+        <div class="mc-field-group">
+          <label for="mce-LNAME">Last Name </label>
+          <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+        </div>
+          <div id="mce-responses" class="clear">
+            <div class="response" id="mce-error-response" style="display:none"></div>
+            <div class="response" id="mce-success-response" style="display:none"></div>
+          </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d21b7989f1f853ed4d6e3d5f3_da9e990441" tabindex="-1" value=""></div>
+            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+            </div>
+        </form>
+        </div>
+        <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+        <!--End mc_embed_signup-->
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>How You Can Help</h2>
-                <p>Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text. Random text.</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
-                </p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
-                </ul>
+                <h3>Questions? Email us</h3>
+                <script>mail("thevesselworld","gmail",0,"")</script>
             </div>
         </div>
     </section>
 
     <footer>
-        <div class="container text-center">
+        <div class="container text-center" id="page-end">
             <p>Copyright &copy; Vessel World 2017</p>
         </div>
     </footer>
