--- a/vessel/index.html
+++ b/vessel/index.html
@@ -71,22 +71,19 @@
     <!-- Intro Header -->
     <header class="intro">
         <div class="intro-body">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8">
-                        <!--<h1 class="brand-heading">Vessel World</h1> -->
-                        <p class="intro-text">Bringing education and opportunity to Africa
-                            <br>through internet connected devices.</p>
-                        
-                    </div>
+            <!-- <div class="container"> -->
+                <div id="intro-text">
+                    <!--<h1 class="brand-heading">Vessel World</h1> -->
+                    <p class="intro-text">Bringing education and opportunity to Africa
+                    <br>through internet connected devices.</p>
                 </div>
-                <div class="row" id="intro-center">
+                <div id="intro-center">
                     <a href="#about" class="btn btn-circle page-scroll">
                         <i class="fa fa-angle-double-down animated"></i>
                     </a>
                 </div>
             </div>
-        </div>
+        <!--</div> -->
     </header>
 
     <!-- About Section -->
