added CV, adjusted formatting

--- a/index.html
+++ b/index.html
@@ -27,15 +27,22 @@
     </head>
     <body>
         <h1>Personal Website of Neil Rens</h1>
-        <h2>Websites I have made</h2>
-        <ul>
-            <li><a href="http://ambassadors.johnshopkins.edu" target="blank">JHU Alumni Ambassadors</a></li>
-            <li><a href="http://consulting.johnshopkins.edu" target="blank">JHU Consulting Networking Reception</a></li>
-            <li><a href="http://www.goinvo.com/features/us-healthcare/" target="blank">U.S. Healthcare</a>
-        </ul>
-        <h2>Websites I am working on</h2>
-        <ul>
-            <li><a href="/vessel/index.html" target="blank">Vessel World</a></li>
-        </ul>
+        <div class="content-section" id="about">
+            <h2>About</h2>
+            <a href="docs/NeilRensResume_02.26.17.pdf">Cirriculum Vitae</a>
+        </div>
+        <div class="content-section" id="websites">
+            <h2>Portfolio</h2>
+            <h3>Live Websites</h3>
+						<ul>
+                <li><a href="http://ambassadors.johnshopkins.edu" target="blank">JHU Alumni Ambassadors</a></li>
+                <li><a href="http://consulting.johnshopkins.edu" target="blank">JHU Consulting Networking Reception</a></li>
+                <li><a href="http://www.goinvo.com/features/us-healthcare/" target="blank">U.S. Healthcare</a>
+            </ul>
+            <h3>Websites In Development</h3>
+            <ul>
+                <li><a href="/vessel/index.html" target="blank">Vessel World</a></li>
+            </ul>
+        </div>
     </body>
 </html>
